# Portal2D-SDL

./: .gitignore  README.md  build-dos-32.bat  build-dos-32.sh  run_dosbox-x.sh
game/: portal2d
game/Textures/: _0.pcx  pspbrwse.jbf
game/gfx/: annika.pal
game/misc/: palette.pal
modules/div0/: div0.lib
modules/drlibs/: dr_pcx.c  dr_pcx.h  dr_pcx.lib  makefile
modules/gbm/: gbm.lib
source/: CMakeLists.txt  console.c  defs.h  dev_io.c  dev_io.h  div0.h  dos.c  dos.h  doskb.c  doskb.h  editor.c  engine.c  engine.h  file_io.c  fix.c  fix.h  level.c  level.h  main.c  makefile  math.c  math.h  math_i.c  math_x.c  matrix.c  matrix.h  object.c  object.h  picture.c  picture.h  polygon.c  polygon.h  portal2d.code-workspace  pragmas.c  pragmas.h  render.c  sector.c  sector.h  sintable.c  spanner.c  (+5 more)
source/inc/: console.h  dev_io.h  engine.h  file_io.h  math.h  math_i.h  math_x.h  matrix.h  object.h  picture.h  polygon.h  portal2d.h  pragmas.h  render.h  rex.h  sector.h  spanner.h  types.h  utils.h  wall.h  world.h
tools/: dosbox-x.conf  pcx2bmp.sh  run_dosbox-x.sh
tools/kaitaistruct/: portal2d_map.ksy
